poprawki połączenia z bazą